--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
     "mocha": "^3.2.0",
+    "proxyquire": "^1.8.0",
     "sinon": "^2.1.0"
   }
 }
