--- a/src/auth/package.json
+++ b/src/auth/package.json
@@ -13,8 +13,15 @@
   },
   "homepage": "https://github.com/ahume/gcframe",
   "dependencies": {
-    "curry": "1.2.0",
     "googleapis": "22.2.0",
+    "rambda": "^1.1.5",
     "winston": "^3.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.10.0"
   }
 }
