--- a/package.json
+++ b/package.json
@@ -27,5 +27,12 @@
     "mocha": "^5.2.0",
     "proxyquire": "^1.8.0",
     "sinon": "^2.1.0"
+  },
+  "dependencies": {
+    "gcframe-auth": "file:src/auth",
+    "gcframe-cors": "file:src/cors",
+    "gcframe-env": "file:src/env",
+    "gcframe-retry": "file:src/retry",
+    "gcframe-router": "file:src/router"
   }
 }
